# UnityNative

./: CMakeLists.txt  README.md  UnityNativeBasic.cpp  UnityNativeBasic.h  UnityNativeBasic_Test.cpp  UnityNativeWrapper.cpp  UnityNativeWrapper.cs
UnityNativeBasic/: .gitignore
UnityNativeBasic/Assets/Scenes/: SampleScene.unity
UnityNativeBasic/Assets/Scripts/: TestPlugin.cs
UnityNativeBasic/ProjectSettings/: ProjectSettings.asset
